# My_LLVM_C

./: CMakeLists.txt
resources/: main.c  main_min.c
scripts/: build.sh  run.sh
src/: AST.h  CMakeLists.txt  File.cpp  File.h  Lexer.cpp  Lexer.h  Log.h  Parser.cpp  Parser.h  ScopeGuard.h  Token.cpp  Token.h  Type.cpp  Type.h  Utils.cpp  Utils.h  main.cpp
